--- a/_includes/header.html
+++ b/_includes/header.html
@@ -24,7 +24,7 @@
 {% if page.cover-img %}
 <div class="big-img intro-header">
   <div class="container-md">
-    <div class="row">
+    <div class="row" style="direction:rtl;text-align:right;">
       <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
         <div class="{{ include.type }}-heading">
           <h1>{% if page.title %}{{ page.title }}{% else %}<br/>{% endif %}</h1>
