--- a/_includes/header.html
+++ b/_includes/header.html
@@ -58,7 +58,7 @@
 {% endif %}
 <div class="intro-header no-img">
   <div class="container-md">
-    <div class="row" style="direction:rtl;text-align:right;">
+    <div class="row">
       <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
         <div class="{{ include.type }}-heading">
           <h1>{% if page.title %}{{ page.title }}{% else %}<br/>{% endif %}</h1>
