--- a/_includes/header.html
+++ b/_includes/header.html
@@ -26,7 +26,7 @@
   <div class="container-md">
     <div class="row" style="direction:rtl;text-align:right;">
       <div class="col-xl-8 offset-xl-2 col-lg-10 offset-lg-1">
-        <div class="{{ include.type }}-heading">
+        <div class="{{ include.type }}-heading" style="direction:rtl;text-align:right;">
           <h1>{% if page.title %}{{ page.title }}{% else %}<br/>{% endif %}</h1>
           {% if page.subtitle %}
             {% if include.type == "page" %}
