--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -46,7 +46,7 @@ layout: page
 
     <p class="post-meta">
       {% assign date_format = site.date_format | default: "%B %-d, %Y" %}
-      Posted on {{ post.date | date: date_format }}
+      {{ post.date | date: date_format }}
     </p>
 
     {% if thumbnail != "" %}
@@ -71,14 +71,14 @@ layout: page
       {{ post.excerpt | strip_html | xml_escape | truncatewords: excerpt_length }}
       {% assign excerpt_word_count = post.excerpt | number_of_words %}
       {% if post.content != post.excerpt or excerpt_word_count > excerpt_length %}
-        <a href="{{ post.url | absolute_url }}" class="post-read-more">[Read&nbsp;More]</a>
+        <a href="{{ post.url | absolute_url }}" class="post-read-more"> [بیشتر] </a>
       {% endif %}
     </div>
     {% endunless %}
 
     {% if site.feed_show_tags != false and post.tags.size > 0 %}
     <div class="blog-tags">
-      <span>Tags:</span>
+      <span>تگ ها : </span>
       {% for tag in post.tags %}
       <a href="{{ '/tags' | absolute_url }}#{{- tag -}}">{{- tag -}}</a>
       {% endfor %}
@@ -93,12 +93,12 @@ layout: page
 <ul class="pagination main-pager">
   {% if paginator.previous_page %}
   <li class="page-item previous">
-    <a class="page-link" href="{{ paginator.previous_page_path | absolute_url }}">&larr; Newer Posts</a>
+    <a class="page-link" href="{{ paginator.previous_page_path | absolute_url }}"> پست های جدید </a>
   </li>
   {% endif %}
   {% if paginator.next_page %}
   <li class="page-item next">
-    <a class="page-link" href="{{ paginator.next_page_path | absolute_url }}">Older Posts &rarr;</a>
+    <a class="page-link" href="{{ paginator.next_page_path | absolute_url }}"> پست های قدیمی </a>
   </li>
   {% endif %}
 </ul>
