--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,13 +35,13 @@ layout: page
     {% endif %}
 
     <a href="{{ post.url | absolute_url }}">
-      <h2 class="post-title">{{ post.title }}</h2>
+      <h3 class="post-title">{{ post.title }}</h3>
 
-      {% if post.subtitle %}
+      <!-- {% if post.subtitle %}
         <h3 class="post-subtitle">
         {{ post.subtitle }}
         </h3>
-      {% endif %}
+      {% endif %} -->
     </a>
 
     <p class="post-meta">
