--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -35,7 +35,7 @@ layout: page
     {% endif %}
 
     <a href="{{ post.url | absolute_url }}">
-      <h3 class="post-title">{{ post.title }}</h3>
+      <h3 class="post-subtitle">{{ post.title }}</h3>
 
       <!-- {% if post.subtitle %}
         <h3 class="post-subtitle">
@@ -44,10 +44,10 @@ layout: page
       {% endif %} -->
     </a>
 
-    <p class="post-meta">
+    <!-- <p class="post-meta">
       {% assign date_format = site.date_format | default: "%B %-d, %Y" %}
       {{ post.date | date: date_format }}
-    </p>
+    </p> -->
 
     {% if thumbnail != "" %}
     <div class="post-image post-image-small">
@@ -71,7 +71,7 @@ layout: page
       {{ post.excerpt | strip_html | xml_escape | truncatewords: excerpt_length }}
       {% assign excerpt_word_count = post.excerpt | number_of_words %}
       {% if post.content != post.excerpt or excerpt_word_count > excerpt_length %}
-        <a href="{{ post.url | absolute_url }}" class="post-read-more"> [بیشتر] </a>
+        <br><a href="{{ post.url | absolute_url }}" class="post-read-more"> [بیشتر] </a>
       {% endif %}
     </div>
     {% endunless %}
