--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -64,10 +64,9 @@ layout: page
     {% endunless %}
 
     {% if site.feed_show_tags != false and post.tags.size > 0 %}
-    <div class="blog-tags">
-      <span>تگ ها : </span>
+    <div class="blog-tags" style="direction: ltr;text-align: left;padding-top: 50px;">
       {% for tag in post.tags %}
-      <a href="{{ '/tags' | absolute_url }}#{{- tag -}}">{{- tag -}}</a>
+      <a href="{{ '/tags' | absolute_url }}#{{- tag -}}">#{{- tag -}} </a>
       {% endfor %}
     </div>
     {% endif %}
