--- a/assets/css/beautifuljekyll-minimal.css
+++ b/assets/css/beautifuljekyll-minimal.css
@@ -11,3 +11,8 @@ footer.footer-min {
   border-top: 1px solid #eeeeee;
   text-align: center;
 }
+
+.blog-post p img {
+  width: 300px;
+  height: 300px;
+}
