--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link rel="icon" type="image/x-icon" href="/assets/img/favicon.png">
-  
+  <meta name="theme-color" content="#aa00ff" />
   {% capture title %}
     {%- if page.share-title -%}
       {{ page.share-title | strip_html | xml_escape }}
@@ -31,10 +31,6 @@
   {% endif %}
 
   <meta name="description" content="{{ description }}">
-
-  {% if site.mobile-theme-col %}
-  <meta name="theme-color" content="{{ site.mobile-theme-col }}">
-  {% endif %}
 
   {% if site.keywords %}
   <meta name="keywords" content="{{ site.keywords }}">
