change footer style

--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -369,9 +369,9 @@ img {
 /* --- Footer --- */
 
 footer {
-  padding: 1.875rem 0;
   border-top: 1px #EAEAEA solid;
-  margin-top: 3.125rem;
+  margin-top: 2rem;
+  padding-bottom: 2rem;
   font-size: 0.875rem;
   background-color: {{ site.footer-col | default: "#EAEAEA" }};
   {% if site.footer-img %}
@@ -410,9 +410,6 @@ footer .footer-custom-content {
 }
 
 @media (min-width: 768px) {
-  footer {
-    padding: 3.125rem 0;
-  }
   footer .footer-links {
     font-size: 1.125rem;
   }
