--- a/assets/css/beautifuljekyll-minimal.css
+++ b/assets/css/beautifuljekyll-minimal.css
@@ -11,3 +11,14 @@ footer.footer-min {
   border-top: 1px solid #eeeeee;
   text-align: center;
 }
+
+pre, code, kbd, samp {
+  direction: ltr;
+  text-align: left;
+  unicode-bidi: plaintext;
+}
+
+pre {
+  white-space: pre;
+  overflow-x: auto;
+}
