--- a/assets/css/beautifuljekyll.css
+++ b/assets/css/beautifuljekyll.css
@@ -30,6 +30,15 @@ h1,h2,h3,h4,h5,h6 {
   font-weight: 800;
   line-height: 1.1;
 }
+pre, code, kbd, samp {
+  direction: ltr;
+  text-align: left;
+  unicode-bidi: plaintext;
+}
+pre {
+  white-space: pre;
+  overflow-x: auto;
+}
 h1 {
   font-size: 2.25rem;
 }
